--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/6.6.1/wavesurfer.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/6.6.1/plugin/wavesurfer.cursor.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/6.6.2/wavesurfer.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/6.6.2/plugin/wavesurfer.cursor.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollToPlugin.min.js"></script>
@@ -98,7 +98,7 @@
                 <div class="grid">
                     <div class="row">
                         <!-- Playing information -->
-                        <div class="playing__info col l-3">
+                        <div class="playing__info col l-3 m-3 c-3">
                             <div class="playing__thumb--img" title="Click to play/pause">
                             </div>
                             <div class="playing__desc--text">
@@ -110,7 +110,7 @@
                         </div>
 
                         <!-- Playing controls-->
-                        <div class="playing__controls col l-6">
+                        <div class="playing__controls col l-6 m-6 c-6">
 
                             <!-- Playing icons -->
                             <div class="controls__wrap">
@@ -169,7 +169,7 @@
                         </div>
 
                         <!-- Playing additional-->
-                        <div class="playing__additional col l-3">
+                        <div class="playing__additional col l-3 m-3 c-3">
 
                             <!-- Volume container -->
                             <div class="volume__wrap">
