--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </div>
 </body>
 
-<script src="./assets/js/visualizer.js"></script>
+<!-- <script src="./assets/js/visualizer.js"></script> -->
 <script src="./assets/js/main.js"></script>
 
 </html>
