--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@
                     <div class="mobile__control--btn visualizer__mobile--btn">
                         <i class="bi bi-disc"></i>
                     </div>
+                    <div class="mobile__control--btn align__mobile--btn">
+                        <i class="bi bi-toggles"></i>
+                    </div>
+                    <div class="mobile__control--btn align__mobile--btn">
+                        <i class="bi bi-columns-gap"></i>
+                    </div>
                     <div class="mobile__control--btn playlist__mobile--btn">
                         <i class="bi bi-music-note-list"></i>
                     </div>
