--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
                 </div>
             </div>
             <div class="playing__mobile hide-pc">
-                <div class="playing__mobile--progress">
-                    <span class="progress__mobile--current">00:00</span>
-                    <input type="range" class="progress__mobile--timeline">
-                    <span class="progress__mobile--total">04:20</span>
+                <input type="range" class="playing__mobile--progress">
+                <div class="playing__mobile--timeline">
+                    <span class="timeline__mobile--current">00:00</span>
+                    <span class="timeline__mobile--total">04:20</span>
                 </div>
                 <div class="playing__mobile--controls">
                     <div class="mobile__control--btn shuffle__mobile--btn">
@@ -231,9 +231,6 @@
                 <div class="mobile__setting--controls">
                     <div class="mobile__control--btn visualizer__mobile--btn">
                         <i class="bi bi-disc"></i>
-                    </div>
-                    <div class="mobile__control--btn align__mobile--btn">
-                        <i class="bi bi-toggles"></i>
                     </div>
                     <div class="mobile__control--btn align__mobile--btn">
                         <i class="bi bi-columns-gap"></i>
