--- a/index.html
+++ b/index.html
@@ -233,13 +233,26 @@
                         <i class="bi bi-disc"></i>
                     </div>
                     <div class="mobile__control--btn align__mobile--btn">
-                        <i class="bi bi-columns-gap"></i>
+                        <i class="bi bi-view-list"></i>
+                    </div>
+                    <div class="mobile__control--btn volume__mobile--btn">
+                        <i class="bi bi-volume-up btn__vol--lound"></i>
                     </div>
                     <div class="mobile__control--btn playlist__mobile--btn">
                         <i class="bi bi-music-note-list"></i>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="modal__mobile--volume">
+        <h2 class="mobile__volume--title">Volume</h2>
+        <div class="mobile__volume--wrap">
+            <div class="mobile__control--btn">
+                <i class="bi bi-volume-up"></i>
+            </div>
+            <input type="range" class="mobile__volume--progress" min="0" max="100" value="0">
+            <span>50%</span>
         </div>
     </div>
 </body>
