--- a/index.html
+++ b/index.html
@@ -215,12 +215,12 @@
                     <div class="mobile__control--btn prev__mobile--btn">
                         <i class="bi bi-skip-start-fill"></i>
                     </div>
-                    <div class="mobile__control--btn play__mobile--btn">
+                    <div class="mobile__control--btn play__mobile--btn active">
                         <i class="bi bi-play-circle"></i>
                     </div>
-                    <!-- <div class="mobile__control--btn pause__mobile--btn">
+                    <div class="mobile__control--btn pause__mobile--btn">
                         <i class="bi bi-pause-circle"></i>
-                    </div> -->
+                    </div>
                     <div class="mobile__control--btn next__mobile--btn">
                         <i class="bi bi-skip-end-fill"></i>
                     </div>
