--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 </div>
             </div>
             <div class="playing__mobile hide-pc">
-                <input type="range" class="playing__mobile--progress">
+                <input type="range" class="playing__mobile--progress" value="0" min="0" max="100">
                 <div class="playing__mobile--timeline">
                     <span class="timeline__mobile--current">00:00</span>
                     <span class="timeline__mobile--total">04:20</span>
@@ -245,7 +245,7 @@
             </div>
         </div>
     </div>
-    <div class="modal__mobile--volume">
+    <div class="modal__mobile--volume hide-pc">
         <h2 class="mobile__volume--title">Volume</h2>
         <div class="mobile__volume--wrap">
             <div class="mobile__control--btn">
