--- a/index.html
+++ b/index.html
@@ -146,9 +146,14 @@
                     <span>Local Files</span>
                 </li>
                 <hr style="width: 90%;">
+                <div style="text-align: center;" class="sidebar__upgrade">
+                    <div class="upgrade__wrap">
+                        <p class="upgrade__text">Upgrade VIP to remove Ads</p>
+                        <div class="upgrade__button">UPGRADE NOW</div>
+                    </div>
+                </div>
             </ul>
-            <div style="text-align: center;" class="sidebar__offer">
-            </div>
+
         </div>
         <!-- Main Section -->
         <div class="main">
