--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
                         <!-- Playing timeline -->
                         <div class="timeline__wrap">
                             <span class="playing__current--duration playing__timeline--duration">00 : 00</span>
-                            <span class="playing__total--duration playing__timeline--duration">04 : 20</span>
+                            <span class="playing__total--duration playing__timeline--duration">00 : 00</span>
                         </div>
                     </div>
 
@@ -788,8 +788,8 @@
         <div class="playing__mobile hide-pc">
             <input type="range" class="playing__mobile--progress" value="0" min="0" max="100">
             <div class="playing__mobile--timeline">
-                <span class="timeline__mobile--current">00:00</span>
-                <span class="timeline__mobile--total">04:20</span>
+                <span class="timeline__mobile--current">00 : 00</span>
+                <span class="timeline__mobile--total">00 : 00</span>
             </div>
             <div class="playing__mobile--controls">
                 <div class="mobile__control--btn shuffle__mobile--btn">
