--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <div class="banner">
                         <div class="banner__slider">
                             <div class="row no-gutters no-wrap">
-                                <div class="col l-4 c-12 banner__item">
+                                <!-- <div class="col l-4 c-12 banner__item">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/1.jpg">
                                     </div>
@@ -223,7 +223,7 @@
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/12.jpg">
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="col l-4 c-12 banner__item">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/13.jpg">
