--- a/index.html
+++ b/index.html
@@ -314,11 +314,11 @@
                         <!-- Album Detail -->
                         <div class="row album__detail">
                             <!-- Album Wrap Details -->
-                            <div class="album__wrap album__detail--wrap col l-3">
+                            <div class="album__wrap album__detail--wrap col l-3 c-12">
 
                             </div>
                             <!-- Songs Wrap Details -->
-                            <div class="album__detail--list col l-9">
+                            <div class="album__detail--list col l-9 c-12">
 
                             </div>
                         </div>
