--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 </div>
                 <!-- Menu Bars Mobile -->
                 <div class="header__mobile--bars control__btn--icon hide-pc">
+                    <i class="bi bi-x"></i>
                     <i class="bi bi-list"></i>
                 </div>
                 <!-- Search Input -->
